--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ img { max-width: 100%; height: auto; }
 .profile-image {
   width: 150px;
   height: 150px;
-  object-fit: cover;
+  object-fit: contain;
   margin: 0 auto 1rem;
   display: block;
 }
